src/app/modules/media/components/mt-media-info/mt-media-info.component.scss
@import 'src/app/styles/variables';

$cover-width: $screen-3xs * 0.5;
$max-cover-width: 33vw;
$content-padding: $spacing-md - $spacing-4xs;

img.cover {
  width: $cover-width;
  max-width: $max-cover-width;
  margin: 0 $content-padding $spacing-3xs 0;
  float: left;
}

sup {
  font-size: 0.67rem;
  vertical-align: top;
}

.property {
  &.padded {
    padding: $spacing-8xs 0;
  }
}

.general-info-only {
  .property-value-pair {
    .property {
      min-width: $spacing-4xl !important;
    }
  }
}

@media (min-width: ($screen-md + 1)) {
  .row {
    display: flex;
    align-items: flex-start;

    .column {
      $column-padding: $spacing-md;
      display: inline-block;

      &.left {
        flex: 1;
        padding-right: $column-padding;
      }

      &.right {
        border-left-style: solid;
        border-left-width: 1px;
        box-sizing: border-box;
        flex: 0 0 192px;
        margin-top: -$spacing-2xs;
        padding: $spacing-2xs 0 $spacing-2xs $column-padding;

        .property-value-pair {
          &:first-child {
            margin-top: 0;
          }
        }
      }
    }
  }
}

